--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -23,6 +23,9 @@
     "immutable": "^3.8.2",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-vector-icons": "^4.6.0",
+    "react-navigation": "^1.5.12",
+    "react-navigation-header-buttons": "^0.0.7",
     "react-redux": "^5.0.7",
     "react-router-native": "^4.2.0",
     "redux": "^4.0.0",
