--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -23,6 +23,7 @@
     "immutable": "^3.8.2",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-platform-touchable": "^1.1.1",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^1.5.12",
     "react-navigation-header-buttons": "^0.0.7",
