--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "expo": "^27.0.1",
     "immutable": "^3.8.2",
+    "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-platform-touchable": "^1.1.1",
