--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -26,8 +26,9 @@
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-platform-touchable": "^1.1.1",
+    "react-native-snap-carousel": "^3.7.0",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^1.5.12",
+    "react-navigation": "^2.0.1",
     "react-navigation-header-buttons": "^0.0.7",
     "react-redux": "^5.0.7",
     "react-router-native": "^4.2.0",
