--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -13,6 +13,7 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-image-picker": "^0.26.10",
+    "react-native-linear-gradient": "^2.4.0",
     "react-native-platform-touchable": "^1.1.1",
     "react-native-snap-carousel": "^3.7.0",
     "react-native-vector-icons": "^4.6.0",
