--- a/BrightID-rn/.eslintrc
+++ b/BrightID-rn/.eslintrc
@@ -1,13 +1,22 @@
 {
-	 "parser": "babel-eslint",
-	"plugins": ["babel", "react", "prettier"],
-	"extends": ["eslint:recommended", "plugin:react/recommended"],
-	"env": {
-		"browser": true,
-		"node": true
-	},
-	"rules": {
-		"no-console": 0,
-		"no-mixed-spaces-and-tabs": 0
-	}
+  "parser": "babel-eslint",
+  "plugins": ["react", "prettier", "import", "jsx-a11y"],
+  "extends": ["airbnb", "plugin:react/recommended"],
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
+  },
+  "rules": {
+    "no-console": 0,
+    "arrow-parens": 0,
+    "global-require": 0,
+    "no-use-before-define": 0,
+    "no-prototype-builtins": 0,
+    "function-paren-newline": 0,
+    "react/prefer-stateless-function": 0,
+    "react/jsx-filename-extension": 0,
+    "react/no-unescaped-entities": 0,
+    "react/require-default-props": 0
+  }
 }
