--- a/BrightID-rn/.flowconfig
+++ b/BrightID-rn/.flowconfig
@@ -20,7 +20,7 @@
 .*/node_modules/metro/.*
 
 ; Ignore react-navigation
-.*/node_modules/react-navigation-header-buttons/.*
+; .*/node_modules/react-navigation-header-buttons/.*
 
 [include]
 
