updated package.json to add prettier hook
updated precommit hook

--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -61,7 +61,10 @@
     }
   },
   "lint-staged": {
-    "*.{js,json,css,md}": ["prettier --write", "git add"]
+    "**/*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
