fixed bug that prevented android from compiling / updated styles to work on android

--- a/BrightID-rn/ios/BrightID/Info.plist
+++ b/BrightID-rn/ios/BrightID/Info.plist
@@ -77,6 +77,8 @@
 		<string>apexnewbookwebfont.ttf</string>
 		<string>ufonts.com_apexnew-thin-opentype.otf</string>
 		<string>ApexNew-Light.otf</string>
+		<string>EurostileRegular.ttf</string>
+		<string>Eurostile.ttf</string>
 	</array>
 </dict>
 </plist>
