--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "husky": "^0.14.3",
+    "husky": "^1.0.0-rc.9",
     "lint-staged": "^7.1.3",
     "prettier": "^1.13.4"
   },
@@ -21,5 +21,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/BrightID/BrightID"
+  },
+  "scripts": {
+    "precommit": "lint-staged"
   }
 }
