--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -19,6 +19,7 @@
     "react-native-platform-touchable": "^1.1.1",
     "react-native-snap-carousel": "^3.7.0",
     "react-native-vector-icons": "^4.6.0",
+    "react-native-webrtc": "^1.63.0",
     "react-navigation": "^2.0.1",
     "react-navigation-header-buttons": "^1.0.0",
     "react-redux": "^5.0.7",
