--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-cli": "^2.0.1",
+    "gulp-diff": "^1.0.0",
+    "gulp-plumber": "^1.2.0",
     "husky": "^1.0.0-rc.9",
     "lint-staged": "^7.1.3",
     "prettier": "^1.13.4"
@@ -27,6 +31,7 @@
     "url": "https://github.com/BrightID/BrightID"
   },
   "scripts": {
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "gulp": "gulp"
   }
 }
