--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -54,8 +54,8 @@
     "flow-stop": "flow stop",
     "flow-status": "flow status",
     "flow-coverage": "flow coverage",
-    "eslint": "eslint 'src/**/*.js*'",
-    "prettify": "prettier --write 'src/**/*.js*'",
+    "eslint": "eslint ./src/**/*.js*",
+    "prettify": "prettier --write ./src/**/*.js*",
     "test": "jest",
     "precommit": "lint-staged"
   },
