--- a/brightID-expo/package.json
+++ b/brightID-expo/package.json
@@ -33,8 +33,8 @@
     "flow-stop": "flow stop",
     "flow-status": "flow status",
     "flow-coverage": "flow coverage",
-    "eslint": "eslint 'src/**/*.js*'",
-    "prettify": "prettier --write 'src/**/*.js*'",
+    "eslint": "eslint src/**/*.js",
+    "prettify": "prettier --write ./src/**/*.js",
     "precommit": "lint-staged"
   },
   "jest": {
