--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
   "name": "brightid",
   "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "precommit": "lint-staged",
+    "gulp": "gulp",
+    "prettify": "prettier --write ./brightID-expo/src/**/*.js && prettier --write ./brightID-rn/src/**/*.js"
+  },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-cli": "^2.0.1",
+    "gulp-diff": "^1.0.0",
     "husky": "^1.0.0-rc.9",
     "lint-staged": "^7.1.3",
-    "prettier": "^1.13.4"
+    "prettier": "^1.13.7"
   },
   "husky": {
     "hooks": {
@@ -25,8 +33,5 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/BrightID/BrightID"
-  },
-  "scripts": {
-    "precommit": "lint-staged"
   }
 }
