--- a/brightID-expo/app.json
+++ b/brightID-expo/app.json
@@ -1,5 +1,17 @@
 {
   "expo": {
-    "sdkVersion": "27.0.0"
+    "name": "BrightID",
+    "description": "Proof of Unique Personhood",
+    "privacy": "unlisted",
+    "sdkVersion": "28.0.0",
+    "ios": {
+      "infoPlist": {
+        "NSPhotoLibraryUsageDescription":
+          "BrightID would like access to your photo gallery",
+        "NSCameraUsageDescription": "BrightID would like to use your camera",
+        "NSPhotoLibraryAddUsageDescription":
+          "BrightID would like to save photos to your photo gallery"
+      }
+    }
   }
 }
