--- a/brightID-expo/package.json
+++ b/brightID-expo/package.json
@@ -2,26 +2,6 @@
   "name": "BrightID",
   "version": "0.1.0",
   "private": true,
-  "devDependencies": {
-    "babel-eslint": "^8.2.3",
-    "babel-preset-react-native": "^4.0.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-flowtype": "^2.49.3",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.9.1",
-    "flow-bin": "0.67.1",
-    "husky": "^1.0.0-rc.9",
-    "jest-expo": "~27.0.0",
-    "lint-staged": "^7.2.0",
-    "prettier": "^1.13.6",
-    "react-native-scripts": "1.14.0",
-    "react-test-renderer": "^16.4.1",
-    "redux-mock-store": "^1.5.3"
-  },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
     "start": "react-native-scripts start",
@@ -45,16 +25,37 @@
     "expo": "^28.0.0",
     "moment": "^2.22.2",
     "react": "16.3.1",
-    "react-native": "~0.55.2",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
     "react-native-platform-touchable": "^1.1.1",
     "react-native-snap-carousel": "^3.7.2",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^2.3.1",
+    "react-navigation": "~2.3.1",
     "react-navigation-header-buttons": "^1.0.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "tweetnacl": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.3",
+    "babel-preset-react-native": "^4.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-flowtype": "^2.49.3",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.9.1",
+    "flow-bin": "0.67.1",
+    "husky": "^1.0.0-rc.9",
+    "jest-expo": "^28.0.0",
+    "lint-staged": "^7.2.0",
+    "prettier": "^1.13.6",
+    "react-native-scripts": "1.14.0",
+    "react-test-renderer": "^16.4.1",
+    "redux-mock-store": "^1.5.3",
+    "sentry-expo": "~1.9.0"
   },
   "husky": {
     "hooks": {
