--- a/webrtc-app/package.json
+++ b/webrtc-app/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.1",
+    "qrcode": "^1.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "tweetnacl": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
