--- a/brightID-expo/package.json
+++ b/brightID-expo/package.json
@@ -27,6 +27,7 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
     "react-native-platform-touchable": "^1.1.1",
+    "react-native-qrcode": "^0.2.6",
     "react-native-snap-carousel": "^3.7.2",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "~2.3.1",
