--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -9,27 +9,57 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "browserify-zlib": "^0.2.0",
+    "constants-browserify": "^1.0.0",
+    "events": "^3.0.0",
     "immutable": "^3.8.2",
     "moment": "^2.22.1",
+    "node-libs-browser": "^2.1.0",
     "prop-types": "^15.6.1",
     "react": "16.4.0",
     "react-native": "0.55.4",
+    "react-native-crypto": "^2.1.2",
     "react-native-image-picker": "^0.26.10",
     "react-native-linear-gradient": "^2.4.0",
     "react-native-platform-touchable": "^1.1.1",
+    "react-native-randombytes": "^3.4.0",
     "react-native-snap-carousel": "^3.7.0",
     "react-native-vector-icons": "^4.6.0",
     "react-native-webrtc": "^1.63.0",
     "react-navigation": "^2.0.1",
     "react-navigation-header-buttons": "^1.0.0",
     "react-redux": "^5.0.7",
+    "readable-stream": "^2.3.6",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
-    "tweetnacl": "^1.0.0"
+    "stream-browserify": "^2.0.1",
+    "timers-browserify": "^2.0.10",
+    "tweetnacl": "^1.0.0",
+    "util": "^0.11.0",
+    "vm-browserify": "^1.1.0",
+    "assert": "^1.1.1",
+    "buffer": "^4.9.1",
+    "console-browserify": "^1.1.0",
+    "dns.js": "^1.0.1",
+    "domain-browser": "^1.1.1",
+    "@tradle/react-native-http": "^2.0.0",
+    "https-browserify": "~0.0.0",
+    "react-native-os": "^1.0.1",
+    "path-browserify": "0.0.0",
+    "process": "^0.11.0",
+    "punycode": "^1.2.4",
+    "querystring-es3": "~0.2.0",
+    "react-native-level-fs": "^3.0.0",
+    "react-native-udp": "^2.1.0",
+    "string_decoder": "~0.10.25",
+    "tty-browserify": "0.0.0",
+    "url": "~0.10.1",
+    "react-native-tcp": "^3.2.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
     "babel-jest": "22.4.4",
+    "babel-plugin-rewrite-require": "^1.14.5",
     "babel-preset-react-native": "4.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
@@ -74,5 +104,57 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/BrightID/BrightID"
+  },
+  "react-native": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  },
+  "browser": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
   }
 }
