--- a/BrightID-rn/android/settings.gradle
+++ b/BrightID-rn/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'BrightID'
+include ':react-native-camera'
+project(':react-native-camera').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-camera/android')
 include ':react-native-tcp'
 project(':react-native-tcp').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-tcp/android')
 include ':react-native-udp'
