--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -7,43 +7,99 @@
     "test": "jest"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "@tradle/react-native-http": "^2.0.1",
+    "assert": "^1.4.1",
+    "browserify-zlib": "^0.1.4",
+    "buffer": "^4.9.1",
+    "console-browserify": "^1.1.0",
+    "constants-browserify": "^1.0.0",
+    "dns.js": "^1.0.1",
+    "domain-browser": "^1.2.0",
+    "events": "^1.1.1",
+    "https-browserify": "0.0.1",
+    "path-browserify": "0.0.0",
+    "process": "^0.11.10",
+    "querystring-es3": "^0.2.1",
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-camera": "^1.1.4",
     "react-native-crypto": "^2.1.2",
     "react-native-image-picker": "^0.26.10",
-    "react-native-platform-touchable": "^1.1.1",
+    "react-native-level-fs": "^3.0.1",
+    "react-native-os": "^1.2.1",
     "react-native-randombytes": "^3.4.0",
-    "react-native-snap-carousel": "^3.7.2",
-    "react-navigation": "^2.6.2",
-    "react-navigation-header-buttons": "^1.2.1",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "tweetnacl": "https://github.com/RnbWd/tweetnacl-js"
+    "react-native-tcp": "^3.3.0",
+    "react-native-udp": "^2.3.1",
+    "react-native-vector-icons": "^4.6.0",
+    "readable-stream": "^1.0.33",
+    "stream-browserify": "^1.0.0",
+    "string_decoder": "^0.10.31",
+    "timers-browserify": "^1.4.2",
+    "tty-browserify": "0.0.0",
+    "tweetnacl": "https://github.com/RnbWd/tweetnacl-js",
+    "url": "^0.10.3",
+    "util": "^0.10.4",
+    "vm-browserify": "0.0.4"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.6",
     "babel-jest": "23.4.0",
-    "babel-plugin-rewrite-require": "^1.14.5",
-    "babel-preset-react-native": "^4.0.0",
-    "eslint": "^5.1.0",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-react": "^7.10.0",
-    "flow-bin": "^0.76.0",
-    "husky": "^0.14.3",
-    "jest": "23.4.0",
-    "prettier": "^1.13.7",
-    "react-test-renderer": "^16.4.1",
-    "redux-mock-store": "^1.5.3"
+    "babel-preset-react-native": "^5",
+    "jest": "23.4.1",
+    "react-test-renderer": "16.4.1"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "react-native": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  },
+  "browser": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
   }
 }
