updated project settings

--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@tradle/react-native-http": "^2.0.1",
     "assert": "^1.4.1",
+    "axios": "^0.18.0",
     "browserify-zlib": "^0.1.4",
     "buffer": "^4.9.1",
     "console-browserify": "^1.1.0",
@@ -17,6 +18,7 @@
     "domain-browser": "^1.2.0",
     "events": "^1.1.1",
     "https-browserify": "0.0.1",
+    "moment": "^2.22.2",
     "path-browserify": "0.0.0",
     "process": "^0.11.10",
     "querystring-es3": "^0.2.1",
@@ -26,12 +28,21 @@
     "react-native-crypto": "^2.1.2",
     "react-native-image-picker": "^0.26.10",
     "react-native-level-fs": "^3.0.1",
+    "react-native-linear-gradient": "^2.4.0",
     "react-native-os": "^1.2.1",
+    "react-native-platform-touchable": "^1.1.1",
     "react-native-randombytes": "^3.4.0",
+    "react-native-snap-carousel": "^3.7.2",
     "react-native-tcp": "^3.3.0",
     "react-native-udp": "^2.3.1",
     "react-native-vector-icons": "^4.6.0",
+    "react-native-webrtc": "^1.63.0",
+    "react-navigation": "^2.6.2",
+    "react-navigation-header-buttons": "^1.2.1",
+    "react-redux": "^5.0.7",
     "readable-stream": "^1.0.33",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "stream-browserify": "^1.0.0",
     "string_decoder": "^0.10.31",
     "timers-browserify": "^1.4.2",
@@ -42,10 +53,21 @@
     "vm-browserify": "0.0.4"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.6",
     "babel-jest": "23.4.0",
     "babel-preset-react-native": "^5",
+    "eslint": "^5.1.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-react": "^7.10.0",
+    "husky": "^1.0.0-rc.9",
     "jest": "23.4.1",
-    "react-test-renderer": "16.4.1"
+    "prettier": "^1.13.7",
+    "react-test-renderer": "^16.4.1",
+    "redux-mock-store": "^1.5.3"
   },
   "jest": {
     "preset": "react-native"
