--- a/BrightID-rn/ios/BrightID/Info.plist
+++ b/BrightID-rn/ios/BrightID/Info.plist
@@ -70,6 +70,17 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>Apex New Medium.otf</string>
+		<string>ApexNew-Book.otf</string>
+		<string>ApexNew-Light.otf</string>
+		<string>ApexNew-Medium.otf</string>
+		<string>apexnewbookwebfont.ttf</string>
+		<string>Eurostile-Regular.ttf</string>
+		<string>Eurostile.ttf</string>
+		<string>EurostileRegular.ttf</string>
+		<string>ufonts.com_apexnew-book-opentype.otf</string>
+		<string>ufonts.com_apexnew-medium-opentype.otf</string>
+		<string>ufonts.com_apexnew-thin-opentype.otf</string>
 	</array>
 </dict>
 </plist>
