--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -2,6 +2,11 @@
   "name": "BrightID",
   "version": "0.0.1",
   "private": true,
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
+  },
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
@@ -21,6 +26,7 @@
     "moment": "^2.22.2",
     "path-browserify": "0.0.0",
     "process": "^0.11.10",
+    "qrcode": "^1.2.0",
     "querystring-es3": "^0.2.1",
     "react": "16.4.1",
     "react-native": "0.56.0",
@@ -32,12 +38,13 @@
     "react-native-os": "^1.2.1",
     "react-native-permissions": "^1.1.1",
     "react-native-platform-touchable": "^1.1.1",
+    "react-native-qrcode": "^0.2.6",
     "react-native-randombytes": "^3.4.0",
     "react-native-snap-carousel": "^3.7.2",
+    "react-native-svg": "^6.4.1",
     "react-native-tcp": "^3.3.0",
     "react-native-udp": "^2.3.1",
     "react-native-vector-icons": "^4.6.0",
-    "react-native-webrtc": "^1.63.0",
     "react-navigation": "^2.6.2",
     "react-navigation-header-buttons": "^1.2.1",
     "react-redux": "^5.0.7",
