--- a/BrightID-rn/.eslintrc
+++ b/BrightID-rn/.eslintrc
@@ -1,11 +1,18 @@
 {
   "parser": "babel-eslint",
-  "plugins": ["react", "prettier", "import", "jsx-a11y", "flowtype"],
-  "extends": ["airbnb", "plugin:react/recommended"],
+  "plugins": ["import", "react", "jsx-a11y", "flowtype"],
+  "extends": [
+    "airbnb",
+    "plugin:react/recommended",
+    "plugin:jsx-a11y/recommended",
+    "plugin:flowtype/recommended",
+    "prettier"
+  ],
   "env": {
     "browser": true,
     "node": true,
-    "es6": true
+    "es6": true,
+    "jest": true
   },
   "rules": {
     "no-console": "off",
@@ -14,12 +21,16 @@
     "no-use-before-define": "off",
     "no-prototype-builtins": "off",
     "function-paren-newline": "off",
+    "class-methods-use-this": "warn",
+    "react/destructuring-assignment": "warn",
+    "react/no-array-index-key": "warn",
     "react/prefer-stateless-function": "off",
     "react/jsx-filename-extension": "off",
     "react/no-unescaped-entities": "off",
     "react/no-did-mount-set-state": "off",
     "react/require-default-props": "off",
     "react/jsx-boolean-value": "off",
+    "react/jsx-one-expression-per-line": "off",
     "consistent-return": "off",
     "no-alert": "off"
   }
