--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -31,6 +31,7 @@
     "qrcode": "^1.2.0",
     "querystring-es3": "^0.2.1",
     "react": "16.4.1",
+    "react-dom": "^16.4.1",
     "react-native": "0.56.0",
     "react-native-camera": "^1.1.4",
     "react-native-crypto": "^2.1.2",
@@ -72,6 +73,8 @@
     "babel-jest": "^23.4.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-react-native": "^5",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.1.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^2.9.0",
@@ -85,11 +88,15 @@
     "husky": "^1.0.0-rc.9",
     "jest": "23.4.1",
     "prettier": "^1.13.7",
+    "react-native-mock": "^0.3.1",
     "react-test-renderer": "^16.4.1",
     "redux-mock-store": "^1.5.3"
   },
   "jest": {
     "preset": "react-native",
+    "globals": {
+      "__TESTING__": true
+    },
     "transform": {
       "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
     },
