--- a/webrtc-app/package.json
+++ b/webrtc-app/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "canary": "BROWSER='Google Chrome Canary' react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
