--- a/webrtc-app/package.json
+++ b/webrtc-app/package.json
@@ -10,6 +10,22 @@
     "react-scripts": "1.1.4",
     "tweetnacl": "^1.0.0"
   },
+  "devDependencies": {
+    "babel-eslint": "^8.2.6",
+    "eslint": "^5.1.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jest": "^21.18.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-react": "^7.10.0",
+    "husky": "^1.0.0-rc.9",
+    "jest": "23.4.1",
+    "prettier": "^1.13.7"
+  },
   "scripts": {
     "start": "react-scripts start",
     "canary": "BROWSER='Google Chrome Canary' react-scripts start",
