--- a/webrtc-app/package.json
+++ b/webrtc-app/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.1",
+    "buffer": "^5.2.0",
     "qrcode": "^1.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-json-view": "^1.19.1",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "tweetnacl": "^1.0.0"
   },
   "devDependencies": {
