--- a/webrtc-app/package.json
+++ b/webrtc-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "buffer": "^5.2.0",
     "qrcode": "^1.2.0",
