--- a/webrtc-app/package.json
+++ b/webrtc-app/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.1.1",
     "tweetnacl": "^1.0.0"
   },
   "devDependencies": {
