--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ DerivedData
 *.xcuserstate
 project.xcworkspace
 
+# CocoaPods
+Pods
+
 # Android/IJ
 .idea
 .gradle
@@ -48,3 +51,5 @@ android/keystores/debug.keystore
 
 # VSCODE
 .vscode
+
+
