--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -28,12 +28,12 @@
     "moment": "^2.22.2",
     "path-browserify": "0.0.0",
     "process": "^0.11.10",
-    "qrcode": "^1.2.0",
+    "qrcode": "^1.2.2",
     "querystring-es3": "^0.2.1",
     "react": "16.4.1",
     "react-dom": "^16.4.1",
-    "react-native": "0.56.0",
-    "react-native-camera": "^1.1.4",
+    "react-native": "^0.56.0",
+    "react-native-camera": "^1.2.0",
     "react-native-crypto": "^2.1.2",
     "react-native-image-picker": "^0.26.10",
     "react-native-level-fs": "^3.0.1",
@@ -41,11 +41,10 @@
     "react-native-os": "^1.2.1",
     "react-native-permissions": "^1.1.1",
     "react-native-platform-touchable": "^1.1.1",
-    "react-native-qrcode": "^0.2.6",
     "react-native-randombytes": "^3.5.0",
     "react-native-snap-carousel": "^3.7.2",
     "react-native-status-bar-height": "^2.0.0",
-    "react-native-svg": "^6.4.1",
+    "react-native-svg": "^6.5.2",
     "react-native-tcp": "^3.3.0",
     "react-native-udp": "^2.3.1",
     "react-native-vector-icons": "^4.6.0",
