--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -26,6 +26,7 @@
     "events": "^1.1.1",
     "https-browserify": "0.0.1",
     "moment": "^2.22.2",
+    "nanoid": "^1.2.1",
     "path-browserify": "0.0.0",
     "process": "^0.11.10",
     "qrcode": "^1.2.2",
