fixed android compilation - easier to compile

--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -40,7 +40,6 @@
     "react-native-level-fs": "^3.0.1",
     "react-native-linear-gradient": "^2.4.0",
     "react-native-os": "^1.2.1",
-    "react-native-permissions": "^1.1.1",
     "react-native-platform-touchable": "^1.1.1",
     "react-native-randombytes": "^3.5.0",
     "react-native-snap-carousel": "^3.7.2",
@@ -48,10 +47,10 @@
     "react-native-svg": "^6.5.2",
     "react-native-tcp": "^3.3.0",
     "react-native-udp": "^2.3.1",
-    "react-native-vector-icons": "^4.6.0",
-    "react-native-webrtc": "^1.63.0",
+    "react-native-vector-icons": "^5.0.0",
+    "react-native-webrtc": "1.63.0",
     "react-navigation": "^2.11.2",
-    "react-navigation-header-buttons": "^1.2.1",
+    "react-navigation-header-buttons": "^2.1.0",
     "react-redux": "^5.0.7",
     "readable-stream": "^1.0.33",
     "redux": "^4.0.0",
