--- a/BrightID-rn/android/app/build.gradle
+++ b/BrightID-rn/android/app/build.gradle
@@ -101,12 +101,22 @@ android {
         applicationId "com.brightid"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
+        manifestPlaceholders = [HOCKEYAPP_APP_ID: "fe3b000696104611ab939693923be864"]
         versionCode 1
         versionName "1.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
+        // jackOptions {
+        //     enabled true
+        // }
     }
+
+    // compileOptions {
+    //     sourceCompatibility JavaVersion.VERSION_1_8
+    //     targetCompatibility JavaVersion.VERSION_1_8
+    // }
+
     splits {
         abi {
             reset()
@@ -144,9 +154,11 @@ dependencies {
     compile project(':react-native-os')
     compile project(':react-native-image-picker')
     compile project(':react-native-camera')
+    compile project(':WebRTCModule')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile 'net.hockeyapp.android:HockeySDK:5.1.0'
 }
 
 // Run this once to be able to run the application with BUCK
@@ -155,3 +167,4 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
