fixed webrtc bug in mycode screen - app is released for testing

--- a/BrightID-rn/android/app/src/main/AndroidManifest.xml
+++ b/BrightID-rn/android/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+      <meta-data android:name="net.hockeyapp.android.appIdentifier" android:value="${HOCKEYAPP_APP_ID}" />
     </application>
+    
 
 </manifest>
