--- a/BrightID-rn/android/gradle.properties
+++ b/BrightID-rn/android/gradle.properties
@@ -18,3 +18,7 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+MYAPP_RELEASE_STORE_FILE=brightid-demo-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=brightid-demo-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=onelove
+MYAPP_RELEASE_KEY_PASSWORD=onelove
