added loading indicators

--- a/BrightID-rn/android/app/build.gradle
+++ b/BrightID-rn/android/app/build.gradle
@@ -158,6 +158,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-spinkit')
     compile project(':react-native-svg')
     compile project(':react-native-linear-gradient')
     compile project(':react-native-vector-icons')
