--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -36,13 +36,16 @@
     "react-native": "^0.56.0",
     "react-native-camera": "^1.2.0",
     "react-native-crypto": "^2.1.2",
+    "react-native-image-crop-picker": "^0.21.1",
     "react-native-image-picker": "^0.26.10",
     "react-native-level-fs": "^3.0.1",
     "react-native-linear-gradient": "^2.4.0",
     "react-native-os": "^1.2.1",
     "react-native-platform-touchable": "^1.1.1",
+    "react-native-progress": "^3.5.0",
     "react-native-randombytes": "^3.5.0",
     "react-native-snap-carousel": "^3.7.2",
+    "react-native-spinkit": "^1.1.1",
     "react-native-status-bar-height": "^2.0.0",
     "react-native-svg": "^6.5.2",
     "react-native-tcp": "^3.3.0",
