--- a/BrightID-rn/ios/Podfile
+++ b/BrightID-rn/ios/Podfile
@@ -30,6 +30,8 @@ target 'BrightID' do
 
  # remove React target so that project will archive
 
+  pod 'react-native-spinkit', :path => '../node_modules/react-native-spinkit'
+
   post_install do |installer|
     installer.pods_project.targets.each do |target|
       if target.name == "React"
