updated repo cache

--- a/BrightID-rn/ios/BrightID/Info.plist
+++ b/BrightID-rn/ios/BrightID/Info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.3</string>
+	<string>1.4</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
@@ -47,6 +47,8 @@
 	<string>&gt;$(PRODUCT_NAME) does not access your calender</string>
 	<key>NSCameraUsageDescription</key>
 	<string>$(PRODUCT_NAME) would like to use your camera</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>$(PRODUCT_NAME) must know where you are at all times in order to verify your identity</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>$(PRODUCT_NAME) does not access your location</string>
 	<key>NSMicrophoneUsageDescription</key>
