--- a/BrightID-rn/android/build.gradle
+++ b/BrightID-rn/android/build.gradle
@@ -18,10 +18,12 @@ buildscript {
 
 allprojects {
     repositories {
-				// Add jitpack repository (added by react-native-spinkit)
-				maven { url "https://jitpack.io" }
+				
         mavenLocal()
         jcenter()
+        maven {
+            url "https://jitpack.io"
+        }
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
