--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -39,7 +39,7 @@
     "react-native-image-crop-picker": "^0.21.1",
     "react-native-image-picker": "^0.26.10",
     "react-native-level-fs": "^3.0.1",
-    "react-native-linear-gradient": "^2.4.0",
+    "react-native-linear-gradient": "^2.4.1",
     "react-native-os": "^1.2.1",
     "react-native-platform-touchable": "^1.1.1",
     "react-native-progress": "^3.5.0",
@@ -52,7 +52,7 @@
     "react-native-udp": "^2.3.1",
     "react-native-vector-icons": "^5.0.0",
     "react-native-webrtc": "1.63.0",
-    "react-navigation": "^2.11.2",
+    "react-navigation": "^2.12.1",
     "react-navigation-header-buttons": "^2.1.0",
     "react-redux": "^5.0.7",
     "readable-stream": "^1.0.33",
@@ -71,26 +71,27 @@
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.56",
     "@babel/preset-flow": "^7.0.0-beta.56",
+    "@babel/types": "^7.0.0-rc.3",
     "babel-core": "^7.0.0-beta.56",
     "babel-eslint": "^8.2.6",
     "babel-jest": "^23.4.2",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-preset-react-native": "^5.0.2",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-config-prettier": "^2.9.0",
+    "babel-preset-react-native": "^5.0.0",
+    "enzyme": "^3.5.0",
+    "enzyme-adapter-react-16": "^1.3.0",
+    "eslint": "^5.4.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jest": "^21.18.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^21.22.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-react": "^7.11.1",
     "husky": "^1.0.0-rc.13",
     "jest": "23.4.1",
-    "prettier": "^1.14.1",
+    "prettier": "^1.14.2",
     "react-native-mock": "^0.3.1",
     "react-test-renderer": "^16.4.1",
     "redux-mock-store": "^1.5.3"
