--- a/BrightID-rn/.eslintrc
+++ b/BrightID-rn/.eslintrc
@@ -40,6 +40,7 @@
     "no-shadow": "warn",
     "import/no-named-as-default": "off",
     "prefer-const": "off",
-    "no-restricted-syntax": "warn"
+    "no-restricted-syntax": "warn",
+    "import/prefer-default-export": "off"
   }
 }
