updated image picker library to cropper library

--- a/BrightID-rn/android/app/build.gradle
+++ b/BrightID-rn/android/app/build.gradle
@@ -141,6 +141,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-randombytes')
     compile project(':react-native-vector-icons')
     compile project(':react-native-spinkit')
     compile project(':react-native-linear-gradient')
