--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -22,7 +22,9 @@
     "domain-browser": "^1.2.0",
     "events": "^1.1.1",
     "https-browserify": "0.0.1",
+    "moment": "^2.22.2",
     "path-browserify": "0.0.0",
+    "pokemon": "^1.2.3",
     "process": "^0.11.10",
     "prop-types": "^15.6.2",
     "qrcode": "^1.2.2",
