--- a/BrightID-rn/ios/Podfile
+++ b/BrightID-rn/ios/Podfile
@@ -32,6 +32,8 @@ target 'BrightID' do
 
  # pod 'react-native-spinkit', :path => '../node_modules/react-native-spinkit'
 
+  pod 'react-native-randombytes', :path => '../node_modules/react-native-randombytes'
+
   post_install do |installer|
     installer.pods_project.targets.each do |target|
       if target.name == "React"
