--- a/BrightID-rn/package.json
+++ b/BrightID-rn/package.json
@@ -29,6 +29,7 @@
     "https-browserify": "0.0.1",
     "mitt": "^1.1.3",
     "moment": "^2.22.2",
+    "nanoid": "^1.2.6",
     "path-browserify": "0.0.0",
     "pokemon": "^1.2.3",
     "process": "^0.11.10",
@@ -36,7 +37,7 @@
     "qrcode": "^1.2.2",
     "querystring-es3": "^0.2.1",
     "react": "16.5.1",
-    "react-native": "^0.57.1",
+    "react-native": "^0.57.2",
     "react-native-camera": "^1.3.0",
     "react-native-crypto": "^2.1.2",
     "react-native-image-crop-picker": "^0.21.2",
