--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gulp-cli": "^2.0.1",
     "gulp-diff": "^1.0.0",
     "gulp-plumber": "^1.2.0",
-    "husky": "^1.0.0-rc.9",
+    "husky": "^1.1.1",
     "lint-staged": "^7.1.3",
     "prettier": "^1.13.7",
     "react-test-renderer": "^16.4.1",
